--- a/gtk-3.0/scss/widgets/_stackswitcher.scss
+++ b/gtk-3.0/scss/widgets/_stackswitcher.scss
@@ -1,8 +1,10 @@
 /* Stack switcher */
 
-.stack-switcher > .button {
+.linked.stack-switcher.horizontal > .button {
+	border-radius: 0;
 	@include tab($tab_color);
-	&:active, &:checked {
+
+&:active, &:checked {
 		box-shadow: inset 0 (-$tab_underline) $selected_bg_color;
 		background-color: $tab_color;
 	}
